--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "axios": "^1.6.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.3",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.3"
   },
