--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-homework-template",
+  "name": "movies-routing-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://VasylPopaz.github.io/goit-react-hw-05-movies/",
+  "homepage": "https://VasylPopaz.github.io/movies-routing-react/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
